
TODO:
	show MIDI length in seconds.
	TextTrackWriter



2017.9.4	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator.cs: created.

	+	Pianist/Fingering.cs: created.
	+	Pianist/Notation.cs: created.


2017.8.31	K.L.	<k.l.lambda@gmail.com>

	>	FingeringGenerator: fixed signature text.


2017.8.30	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: added method of clear.
	+	FingeringGenerator: added note field in marker.

	+	FingeringGenerator: added random marker sample.

	+	FingeringGeneratorEditor: generate pipeline added.

	+	FingeringGenerator: MIDI load implemented.
	+	FingeringGenerator: created.


2017.8.29	K.L.	<k.l.lambda@gmail.com>

	+	HandController: gear linkages implemented.


2017.8.23	K.L.	<k.l.lambda@gmail.com>

	+	MIDIPlayer: added PlayerPrefs to save media folder.

	+	PianoController: added rest keys.


2017.8.22	K.L.	<k.l.lambda@gmail.com>

	+	MIDIPiano: created.

	+	PianoController: created.

	+	MIDIPlayer: added MIDI sequence.


2017.8.21	K.L.	<k.l.lambda@gmail.com>

	*	Embed fingering information into MIDI stream by meta message of type Text and Marker.
			Text: Fingering by K.L.Pianist, fingering-marker-pattern:finger\(([\d,]+)\)
			Marker: finger(n[,n...])
				n=-5,-4,-3,-2,-1,1,2,3,4,5

	+	UI prefab MIDIPlayer created.

	+	MeshBuilder: added snap to integer for normal vector.


2017.8.20	K.L.	<k.l.lambda@gmail.com>

	+	Prefab of Piano added.
	+	Mesh of Shell added.

	+	Prefab of Keyboard added.

	+	Prefab of KeyGroup added.

	+	KeyModifier: mirror added.


2017.8.19	K.L.	<k.l.lambda@gmail.com>

	+	KeyModifier: setHollowX implemented.

	+	KeyModifier: script created.

	+	MeshBuilder: added inverse faces.

	*	key00 indices:
			1,2,7,6
			3,4,9,8
			27,32,33,29
			28,31,30,26
			22,20,38,36
			37,39,21,23
			24,34,35,25
			11,0,5,13
			14,1,0,11
			13,5,6,15
			18,16,1,14
			15,6,17,19
			1,1,0,0
			5,5,6,6
			0,1,6,5
			10,38,16,18
			19,17,39,12
			36,10,34,24
			25,35,12,37
			38,20,2,1
			38,1,16,38
			39,6,7,21
			17,6,39,17