@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: 9d4ec5919adcc3746873f3b80a2bcc51
+timeCreated: 1504528969
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
